--- a/index.html
+++ b/index.html
@@ -1,19 +1,228 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tenis Kikes | Inicio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background-color: #f8f9fa;
+      color: #333;
+    }
+
+    nav {
+      background-color: #202d36;
+      color: white;
+      padding: 12px 0;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 16px;
+      transition: color 0.3s;
+    }
+
+    nav ul li a:hover {
+      color: #00e39f;
+    }
+
+    .hero {
+      background: linear-gradient(rgba(32, 45, 54, 0.8), rgba(32, 45, 54, 0.8)),
+                  url('https://thumbs.dreamstime.com/b/fondo-de-verano-minimalista-con-zapatos-zapatillas-deporte-cuero-para-mujer-blanco-sombra-hoja-tropical-sobre-vista-superior-la-212439045.jpg') no-repeat center center/cover;
+      height: 80vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: #00e39f;
+      padding: 0 20px;
+    }
+
+    .hero h1 {
+      font-size: 4.2rem;
+      font-weight: 700;
+      letter-spacing: 1px;
+      text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.7);
+    }
+
+    .hero p {
+      font-size: 1.6rem;
+      margin-top: 10px;
+      color: #e0fdf7;
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
+    }
+
+    .carousel {
+      margin: 80px auto;
+      width: 90%;
+      max-width: 1000px;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .carousel-track {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .carousel-item {
+      min-width: 100%;
+      box-sizing: border-box;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .carousel-item img {
+      width: 300px;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    }
+
+    .carousel-item h3 {
+      margin-top: 15px;
+      font-size: 1.3rem;
+    }
+
+    .carousel-buttons {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      transform: translateY(-50%);
+    }
+
+    .carousel-buttons button {
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-size: 20px;
+    }
+
+    .content {
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    .content h2 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+
+    .content p {
+      font-size: 1.1rem;
+      max-width: 800px;
+      margin: auto;
+      color: #555;
+    }
+
+    footer {
+      background-color: #202d36;
+      color: white;
+      text-align: center;
+      padding: 15px 0;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
+  <!-- Navegación -->
+  <nav>
     <ul>
-        <li><a href="/pages/contactanos.html">contactanos</a></li>
-        <li><a href="/pages/personal.html">personal</a></li>
-        <li><a href="/pages/quienes-somos.html">Quiénes Somos</a></li>
-        <li><a href="/pages/servicios.html">servicios</a></li>
+      <li><a href="/pages/contactanos.html">Contáctanos</a></li>
+      <li><a href="/pages/personal.html">Personal</a></li>
+      <li><a href="/pages/quienes-somos.html">Quiénes Somos</a></li>
+      <li><a href="/pages/servicios.html">Servicios</a></li>
     </ul>
+  </nav>
+
+  <!-- Hero -->
+  <div class="hero">
+    <div>
+      <h1>Tenis Kikes</h1>
+      <p>Calidad y estilo en cada paso</p>
+    </div>
+  </div>
+
+  <!-- Carrusel de catálogo -->
+  <div class="carousel">
+    <div class="carousel-track" id="track">
+      <div class="carousel-item">
+        <img src="https://http2.mlstatic.com/D_NQ_NP_615213-MLM76794713729_062024-O.webp" alt="Tenis 1">
+        <h3>Modelo Runner Pro</h3>
+      </div>
+      <div class="carousel-item">
+        <img src="https://calzadoseguridad.com.mx/niu/images/FotosComprimidas/1913Sport/Tenis-de-seguridad-choclo-1913-dielectricos-400px-Suela.jpg" alt="Tenis 2">
+        <h3>Modelo Street Classic</h3>
+      </div>
+      <div class="carousel-item">
+        <img src="https://http2.mlstatic.com/D_NQ_NP_858271-MLM76594088178_062024-O.webp" alt="Tenis 3">
+        <h3>Modelo Sport X</h3>
+      </div>
+    </div>
+    <div class="carousel-buttons">
+      <button onclick="prevSlide()">❮</button>
+      <button onclick="nextSlide()">❯</button>
+    </div>
+  </div>
+
+  <!-- Sección sobre nosotros -->
+  <div class="content">
+    <h2>Sobre Nosotros</h2>
+    <p>En Tenis Kikes nos apasiona el calzado deportivo. Nuestra misión es ofrecer tenis de alta calidad con diseños innovadores que se adapten a tu estilo y necesidades. ¡Descubre nuestras colecciones y camina con confianza!</p>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Tenis Kikes. Todos los derechos reservados.</p>
+  </footer>
+
+  <script>
+    const track = document.getElementById('track');
+    let index = 0;
+
+    function showSlide(i) {
+      const items = document.querySelectorAll('.carousel-item');
+      const total = items.length;
+      index = (i + total) % total;
+      track.style.transform = `translateX(-${index * 100}%)`;
+    }
+
+    function nextSlide() {
+      showSlide(index + 1);
+    }
+
+    function prevSlide() {
+      showSlide(index - 1);
+    }
+
+    // Auto-play
+    setInterval(nextSlide, 4000);
+  </script>
 </body>
 </html>
-
-
-s
